Adding new tab open function to all links
Adding new tab open function to all links

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     <p class="lead mb-5">Highly motivated software developer from the Los Angeles area with 3 years of professional experience, and a passion for creating great software.</p>
                     <p>Let's connect !</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/cristian-avina-lopez/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/codeham"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/cristian-avina-lopez/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/codeham" target="_blank"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
@@ -224,20 +224,30 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-book text-warning"></i></span>
-                            <a href="https://www.amazon.com/Grokking-Algorithms-illustrated-programmers-curious/dp/1617292230/ref=sr_1_1?crid=MP9UV9BC68LV&dchild=1&keywords=grokking+algorithm&qid=1617405190&s=books&sprefix=Grokking+Al%2Cstripbooks%2C206&sr=1-1">Grokking Algorithms</a>
+                            <a href="https://www.amazon.com/Grokking-Algorithms-illustrated-programmers-curious/dp/1617292230/ref=sr_1_1?crid=MP9UV9BC68LV&dchild=1&keywords=grokking+algorithm&qid=1617405190&s=books&sprefix=Grokking+Al%2Cstripbooks%2C206&sr=1-1" target="_blank">Grokking Algorithms</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-book text-warning"></i></span>
-                            <a href="https://www.amazon.com/Pragmatic-Programmer-Journeyman-Master-ebook/dp/B003GCTQAE/ref=sr_1_2?crid=A2S3RR161LOH&dchild=1&keywords=pragmatic+programmer&qid=1617405292&s=books&sprefix=pragma%2Cstripbooks%2C209&sr=1-2">Pragmatic Programmer</a>
+                            <a href="https://www.amazon.com/Pragmatic-Programmer-Journeyman-Master-ebook/dp/B003GCTQAE/ref=sr_1_2?crid=A2S3RR161LOH&dchild=1&keywords=pragmatic+programmer&qid=1617405292&s=books&sprefix=pragma%2Cstripbooks%2C209&sr=1-2" target="_blank">Pragmatic Programmer</a>
                             
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-book text-warning"></i></span>
-                            <a href="https://www.amazon.com/Head-First-Java-Kathy-Sierra/dp/0596009208/ref=sr_1_1?dchild=1&keywords=head+first+java&qid=1617405332&s=books&sr=1-1">Head First Java</a>
+                            <a href="https://www.amazon.com/Head-First-Java-Kathy-Sierra/dp/0596009208/ref=sr_1_1?dchild=1&keywords=head+first+java&qid=1617405332&s=books&sr=1-1" target="_blank">Head First Java</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-book text-warning"></i></span>
-                            <a href="https://www.amazon.com/Microservices-Patterns-examples-Chris-Richardson/dp/1617294543/ref=sr_1_1?crid=32BV0W25IP7BQ&dchild=1&keywords=microservices+patterns&qid=1617405455&s=books&sprefix=Microser%2Cstripbooks%2C213&sr=1-1">Microservices Patterns</a>
+                            <a href="https://www.amazon.com/Microservices-Patterns-examples-Chris-Richardson/dp/1617294543/ref=sr_1_1?crid=32BV0W25IP7BQ&dchild=1&keywords=microservices+patterns&qid=1617405455&s=books&sprefix=Microser%2Cstripbooks%2C213&sr=1-1" target="_blank">Microservices Patterns</a>
+                        </li>
+                    </ul>
+                    <br style="margin-bottom:240px;"/>
+                    <!-- Resume Download -->
+                    <div class="subheading mb-3">Need My Resume ?</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-clipboard text-warning"></i></span>
+                            <a href="https://1drv.ms/b/s!AtbnZM-nAAk1ixW5t0MIk-p5u-sg?e=ay05Zy" target="_blank">Resume Download</a>
+                            
                         </li>
                     </ul>
                 </div>
